--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         // ==========================================
         // CONFIGURACIÓN (RELLENA ESTOS DATOS)
         // ==========================================
-        const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQBENNz-awzr5fmMUjdlGUBHr1EYFlGGXtDEKRuOQT_iXmU8f9zf4z2OMG9TLiQBO2KLHRLpgoqti0z/pub?output=csv
-'; 
+        const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQBENNz-awzr5fmMUjdlGUBHr1EYFlGGXtDEKRuOQT_iXmU8f9zf4z2OMG9TLiQBO2KLHRLpgoqti0z/pub?output=csv'; 
         const TELEFONO_NEGOCIO = '5215518376723'; // Número sin símbolos (+), solo números.
 
         let carrito = [];
