--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Digital</title>
+    <title>La Gusguería</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .product-card { transition: transform 0.2s; }
@@ -46,7 +46,8 @@
         
         // 1. Enlace CSV de Google Sheets (Publicado en la Web)
         // const SHEET_CSV_URL = 'TU_LINK_DE_GOOGLE_SHEETS_AQUI'; 
-        const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQBENNz-awzr5fmMUjdlGUBHr1EYFlGGXtDEKRuOQT_iXmU8f9zf4z2OMG9TLiQBO2KLHRLpgoqti0z/pub?output=csv'; 
+        // const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQBENNz-awzr5fmMUjdlGUBHr1EYFlGGXtDEKRuOQT_iXmU8f9zf4z2OMG9TLiQBO2KLHRLpgoqti0z/pub?output=csv'; 
+        const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vT1TiLuDQq5Dk3vJjhmd534zHWNeHu4v-UAnDcfZxMpFaTNAzn-hy5Wmn8O1IqYvNUiMF7qbGfGLSBR/pub?output=csv'; 
         
         // 2. Número de WhatsApp del negocio (Solo números, sin signos)
         // const TELEFONO_NEGOCIO = '521XXXXXXXXXX'; 
