--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-gray-50 pb-32">
 
     <header class="bg-gradient-to-br from-orange-600 to-red-600 text-white p-6 text-center shadow-lg rounded-b-3xl">
-        <h1 class="text-3xl font-extrabold tracking-tight">Menú Fin de Semana</h1>
+        <h1 class="text-3xl font-extrabold tracking-tight">La Gusguería</h1>
         <p class="text-sm opacity-90 mt-1">¡Pide rápido antes de que se acaben!</p>
     </header>
 
