--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         // 1. Enlace CSV de Google Sheets (Publicado en la Web)
         // const SHEET_CSV_URL = 'TU_LINK_DE_GOOGLE_SHEETS_AQUI'; 
         // const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQBENNz-awzr5fmMUjdlGUBHr1EYFlGGXtDEKRuOQT_iXmU8f9zf4z2OMG9TLiQBO2KLHRLpgoqti0z/pub?output=csv'; 
-        const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vT1TiLuDQq5Dk3vJjhmd534zHWNeHu4v-UAnDcfZxMpFaTNAzn-hy5Wmn8O1IqYvNUiMF7qbGfGLSBR/pub?output=csv'; 
+        const SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vT1TiLuDQq5Dk3vJjhmd534zHWNeHu4v-UAnDcfZxMpFaTNAzn-hy5Wmn8O1IqYvNUiMF7qbGfGLSBR/pub?gid=1374506693&single=true&output=csv'; 
         
         // 2. Número de WhatsApp del negocio (Solo números, sin signos)
         // const TELEFONO_NEGOCIO = '521XXXXXXXXXX'; 
